<resources>
    <string name="app_name">FoodTruck</string>
    <string name="title_activity_maps">Food Truck</string>
    <string name="toolbar_profileTitle">حسابي</string>
    <string name="toolbar_mapTitle">الخريطة</string>
    <string name="toolbar_truckListTitle">قائمة العربات</string>
    <string name="gpsAlert_title">تفعيل GPS</string>
    <string name="gpsAlert_message">يجب تفعيل GPS أولاً</string>
    <string name="gpsAlert_positiveButton">تفعيل</string>
    <string name="gpsAlert_negativeButton">ليس الأن</string>
    <string name="toolbar_notificationTitle">الإشعارات</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="login_Email">البريد الإلكتروني</string>
    <string name="login_password">كلمة المرور</string>
    <string name="login_loginBtn">تسجيل الدخول</string>
    <string name="Register_user_name">اسم المستخدم</string>
    <string name="phonenumberRegister">رقم الجوال</string>
    <string name="passwordconform">تأكيد كلمة المرور</string>
    <string name="registerBtn">تسجيل</string>
    <string name="registerChooseTruck">صاحب عربة طعام</string>
    <string name="registerChooseUser">حساب مستخدم</string>
    <string name="RegisterChooseText">اختر نوع الحساب</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="truck_description">وصف العربة</string>
    <string name="truckName">اسم العربة</string>
    <string name="change_password">تغير كلمة المرور؟</string>
    <string name="truck_status">الحالة:</string>
    <string name="truckStatus_open">مفتوح</string>
    <string name="truckStatus_closed">مغلق</string>
    <string name="navigationBar_signIn">تسجيل الدخول</string>
    <string name="navigationHeader_createAccount">إنشاء حساب</string>
    <string name="login_emailOrUsername">البريد الإلكتروني أو اسم المستخدم</string>
    <string name="navigationHeader_signOut">تسجيل الخروج</string>
    <string name="reserve">أحجز العربة</string>
    <string name="order">اطلب الآن</string>
    <string name="comunication">وسائل التواصل</string>
    <string name="register_inputEmpty">الرجاء إدخال جميع البيانات</string>
    <string name="register_passwordLength">كلمة المرور يجب ألا تقل عن 6 خانات</string>
    <string name="register_notSamePassword">الرجاء التحقق من أن كلمة المرور متطابقة</string>
    <string name="register_invalidEmail">الرجاء إدخال بريد إلكتروني صحيح</string>
    <string name="register_invalidPhone">الرجاء إدخال رقم جوال صحيح</string>
    <string name="serverNotResponse">الخادم لا يستجيب تحقق من اتصال الأنترنت و حاول لاحقاً</string>
    <string name="register_completed">تم تسجيل الحساب بنجاح</string>
    <string name="email_isUsed">البريد الإلكتروني مستخدم مسبقاً</string>
    <string name="username_isUsed">اسم المستخدم المدخل موجود مسبقاً</string>
    <string name="register_userInvalid">اسم المستخدم يجب أن يبدأ بحرف.</string>
    <string name="price_currency">SR</string>
    <string name="login_failed">اسم المستخدم أو كلمة المرور غير صحيحة</string>
    <string name="login_success">تم تسجيل الدخول بنجاح</string>
    <string name="rate">قيم</string>
    <string name="rating">تقييم</string>
    <string name="add_to_favorate">add_tofavorate</string>
    <string name="save">حفظ</string>
    <string name="editProfile">تعديل الملف الشخصي</string>
    <string name="data_updated_success">تم تحديث البيانات بنجاح</string>
    <string name="unknownError">حدث خطأ غير معروف حاول مرة أخرى</string>
    <string name="menu">قائمة الطعام</string>
    <string name="updateTruckStatus">تحديث حالة العربة</string>
    <string name="truckStatus_update_success">تم تحديث حالة العربة بنجاح</string>
    <string name="must_select_yourLocation_toUpdateStatus">يجب تحديد موقعك الحالي لتحديث الحالة</string>
    <string name="optional">(اختياري)</string>
    <string name="the_truck">العربة</string>
    <string name="edit_truckMenu">تعديل قائمة الطعام</string>
    <string name="add_product">إضافة منتج</string>
    <string name="product_name">اسم المنتج</string>
    <string name="product_price">سعر المنتج</string>
    <string name="add">إضافة</string>
    <string name="cancel">إلغاء</string>
    <string name="productDescription_optional">وصف المنتج</string>
    <string name="update">تحديث</string>
    <string name="productAdded">تمت إضافة المنتج</string>
    <string name="productUpdate">تم تحديث المنتج</string>
    <string name="productDeleted">تم حدف المنتج</string>
    <string name="back">رجوع</string>
    <string name="youMustRegister">يجب إنشاء حساب مستخدم اولاً</string>
    <string name="truckImageUpdated">تم تحديث شعار العربة بنجاح</string>
    <string name="truck_page">صفحة العربة</string>
    <string name="register_truckLogo_isEmpty">يجب وضع شعار لعربة الطعام</string>
    <string name="update_status">تحديث الحالة</string>
    <string name="morning">صباحاً</string>
    <string name="night">مساءً</string>
    <string name="truckWillBe_offAt">سيتم وضع حالة العربة مغلق عند</string>
    <string name="theInterval_mustNotBe_moreThan_12Hours">يجب أن لا تزيد المدة عن 12 ساعة</string>
    <string name="midnight">منتصف الليل</string>
    <string name="noon">ظهراً</string>
    <string name="choose_closeTime">أختر وقت إغلاق العربة</string>
    <string name="selectRateFirst">يجب تحديد التقييم أولاً</string>
    <string name="rate_success">شكراً لتقييمك العربة.</string>
    <string name="KM">KM</string>
    <string name="send_order">إرسال الطلب</string>
    <string name="totalPrice">قيمة الطلب الكلية: </string>
    <string name="orderPrice_mustBe_moreThan_1">يجب أن لاتقل قيمة الطلب عن 1 ريال</string>
    <string name="cannotOrder_truckClosed">عذراً العربة مغلقة.</string>
    <string name="cannotOrder_notAcceptOrder">عذراً العربة لاتقبل تحضير الطعام.</string>
    <string name="IWantToReceiveOrders_fromCustomers">أريد إستقبال طلبات تحضير الطعام من الزبائن.</string>
    <string name="mustAddProducts_first">يجب إضافة منتجات أولاً</string>
    <string name="orderInserted_success">تم إرسال الطلب بنجاح</string>
    <string name="noFavoriteTrucks">لا توجد عربات في المفضلة</string>
    <string name="favorite">المفضلة</string>
    <string name="my_orders">طلباتي</string>
    <string name="pending_await_order">في الإنتظار</string>
    <string name="order_by">تم الطلب بواسطة:</string>
    <string name="total_price">السعر الكلي:</string>
    <string name="order_detail">تفاصيل الطلب</string>
    <string name="the_product">المنتج</string>
    <string name="the_quantity">الكمية</string>
    <string name="the_price">السعر</string>
    <string name="accept_order">قبول الطلب</string>
    <string name="reject_order">رفض الطلب</string>
    <string name="no_order_found">لا توجد طلبات.</string>
    <string name="orderStatus_accepted">مقبول</string>
    <string name="orderStatus_rejected">مرفوض</string>
    <string name="reject">رفض</string>
    <string name="accept">قبول</string>
    <string name="orderUpdated">تم تحديث حالة الطلب</string>
    <string name="new_order_forYou_title">طلب جديد!</string>
    <string name="new_order_forYou_detail">يوجد طلبات جديدة (انقر للمزيد من التفاصيل)</string>
    <string name="order_from">طلب من العربة:</string>
    <string name="yourOrder_statusUpdated">تم تحديث حالة طلبك!</string>
    <string name="clickForDetail">(انقر للمزيد من التفاصيل)</string>

</resources>
