<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group>

        <item android:id="@+id/navigationBarItem_truckList" android:title="@string/toolbar_truckListTitle"
            android:icon="@drawable/list" android:checkable="true" />

        <item android:id="@+id/navigationBarItem_map" android:title="@string/toolbar_mapTitle"
            android:icon="@drawable/map" android:checkable="true"/>

        <item android:id="@+id/navigationBarItem_favorite"
            android:title="@string/favorite"
            android:checkable="true" android:icon="@drawable/fav"
            />

        <item android:id="@+id/navigationBarItem_profile" android:title="@string/the_truck"
            android:icon="@drawable/profile" android:checkable="true"/>

        <item android:id="@+id/navigationBarItem_myOrders" android:title="@string/my_orders"
            android:checkable="true" android:icon="@drawable/notification" />

    </group>
</menu>