<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Register_user_name"
        tools:layout_editor_absoluteX="303dp"
        tools:layout_editor_absoluteY="96dp"
        tools:text="@string/Register_user_name" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="355dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Email"
        tools:layout_editor_absoluteX="21dp"
        tools:layout_editor_absoluteY="126dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="17dp"
        android:text="@string/login_Email"
        tools:layout_editor_absoluteX="294dp"
        tools:layout_editor_absoluteY="181dp" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="356dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        tools:layout_editor_absoluteX="21dp"
        tools:layout_editor_absoluteY="209dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_password"
        tools:layout_editor_absoluteX="321dp"
        tools:layout_editor_absoluteY="266dp" />

    <EditText
        android:id="@+id/editText6"
        android:layout_width="355dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="21dp"
        tools:layout_editor_absoluteY="293dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phonenumberRegister"
        tools:layout_editor_absoluteX="320dp"
        tools:layout_editor_absoluteY="434dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/passwordconform"
        tools:layout_editor_absoluteX="292dp"
        tools:layout_editor_absoluteY="351dp" />

    <EditText
        android:id="@+id/editText7"
        android:layout_width="356dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="20dp"
        tools:layout_editor_absoluteY="378dp" />

    <EditText
        android:id="@+id/editText8"
        android:layout_width="354dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="phone"
        tools:layout_editor_absoluteX="26dp"
        tools:layout_editor_absoluteY="462dp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="196dp"
        android:layout_height="wrap_content"
        android:text="@string/registerBtn"
        tools:layout_editor_absoluteX="113dp"
        tools:layout_editor_absoluteY="529dp" />

    <RadioButton
        android:id="@+id/radioButton"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:text="@string/registerChooseTruck"
        tools:layout_editor_absoluteX="226dp"
        tools:layout_editor_absoluteY="47dp" />

    <RadioButton
        android:id="@+id/radioButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registerChooseUser"
        tools:layout_editor_absoluteX="71dp"
        tools:layout_editor_absoluteY="47dp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/RegisterChooseText"
        tools:layout_editor_absoluteX="288dp"
        tools:layout_editor_absoluteY="16dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />
</android.support.constraint.ConstraintLayout>