<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RadioButton
        android:id="@+id/radioButton_asTruck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/registerChooseTruck"
        app:layout_constraintStart_toEndOf="@+id/radioButton_asCustomer"
        app:layout_constraintTop_toTopOf="@+id/radioButton_asCustomer"
        android:layout_marginLeft="16dp" />

    <RadioButton
        android:id="@+id/radioButton_asCustomer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="80dp"
        android:text="@string/registerChooseUser"
        app:layout_constraintStart_toStartOf="@+id/login_emailOrUsername_editText"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="8dp" />

    <EditText
        android:id="@+id/login_emailOrUsername_editText"
        style="@style/myEditText"
        android:layout_width="312dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:gravity="start"
        android:hint="@string/login_emailOrUsername"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioButton_asCustomer" />


    <EditText
        android:id="@+id/login_password"
        android:layout_width="312dp"
        android:layout_height="wrap_content"
        style="@style/myEditText"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:hint="@string/login_password"
        android:inputType="textPassword"
        android:gravity="start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_emailOrUsername_editText" />

    <Button
        android:id="@+id/login_signIn_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/login_loginBtn"
        android:background="@color/colorSecondary"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:paddingRight="8dp"
        android:paddingLeft="8dp"
        app:layout_constraintEnd_toEndOf="@+id/login_password"
        app:layout_constraintStart_toStartOf="@+id/login_password"
        app:layout_constraintTop_toBottomOf="@+id/login_password" />
</android.support.constraint.ConstraintLayout>