<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

<android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <TextView
        android:id="@+id/truckProfile_truckHeaderName"
        style="@style/Base.TextAppearance.AppCompat.Headline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="Burger HQ"
        android:textColor="@color/colorTextBlack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/truckProfile_truckImage"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/truckProfile_truckImage"
        android:layout_width="@dimen/truck_profile_imageSize"
        android:layout_height="80dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:src="@drawable/foodtruck"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/truckProfile_truckHeaderName" />

    <EditText
        android:id="@+id/truckProfile_truckUsernameEdit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:inputType="text"
        style="@style/myEditText"
        android:gravity="center"
        android:hint="@string/Register_user_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/truckProfile_truckImage" />

    <EditText
        android:id="@+id/truckProfile_truckEmailEdit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/myEditText"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:inputType="textEmailAddress"
        android:gravity="center"
        android:hint="@string/login_Email"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/truckProfile_truckUsernameEdit" />

    <EditText
        android:id="@+id/truckProfile_truckPhoneEdit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/myEditText"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:inputType="phone"
        android:gravity="center"
        android:hint="@string/phonenumberRegister"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/truckProfile_truckEmailEdit" />

    <TextView
        android:id="@+id/truckProfile_changePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/change_password"
        android:textColor="@color/colorAccent"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/truckProfile_truckPhoneEdit"
        android:layout_marginLeft="16dp" />

    <EditText
        android:id="@+id/truckProfile_truckNameEdit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/myEditText"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:hint="@string/truckName"
        android:inputType="text"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/truckProfile_changePassword" />

    <EditText
        android:id="@+id/truckProfile_truckDescriptionEdit"
        android:layout_width="0dp"
        android:layout_height="@dimen/truckDescription_editText_Height"
        style="@style/myEditText"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:hint="@string/truck_description"
        android:inputType="textMultiLine"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/truckProfile_truckNameEdit" />

</android.support.constraint.ConstraintLayout>

</ScrollView>